feat: replace repo content with RPA management system
- Full backend with Spring Boot RPA management APIs
- Frontend components
- E2E tests with Playwright
- Collects data, robots, tasks, workflows management
- JWT authentication and role-based permissions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>