@@ -1,14 +1,12 @@
 package com.rpa.management.config;
 
-import com.rpa.management.security.JwtAuthenticationFilter;
-import com.rpa.management.security.RestAccessDeniedHandler;
-import com.rpa.management.security.RestAuthenticationEntryPoint;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -18,52 +16,108 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
+/**
+ * Spring Security配置
+ */
 @Configuration
+@EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
-
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http,
-                                                   JwtAuthenticationFilter jwtAuthenticationFilter,
-                                                   RestAuthenticationEntryPoint authenticationEntryPoint,
-                                                   RestAccessDeniedHandler accessDeniedHandler) throws Exception {
-        http
-            .csrf(csrf -> csrf.disable())
-            .cors(Customizer.withDefaults())
-            .headers(headers -> headers.frameOptions(frame -> frame.disable()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .exceptionHandling(exception -> exception
-                .authenticationEntryPoint(authenticationEntryPoint)
-                .accessDeniedHandler(accessDeniedHandler))
-            .authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/error").permitAll()
-                .requestMatchers("/auth/login").permitAll()
-                .requestMatchers("/api/auth/login").permitAll()
-                .requestMatchers(HttpMethod.GET, "/user/avatar/**", "/api/user/avatar/**").permitAll()
-                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/h2-console/**").permitAll()
-                .requestMatchers("/api/v3/api-docs/**", "/api/swagger-ui/**", "/api/swagger-ui.html", "/api/h2-console/**").permitAll()
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .anyRequest().authenticated())
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-        return http.build();
-    }
-
+    
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    /**
+     * 密码加密器
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
+    
+    /**
+     * 安全过滤器链
+     */
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // 禁用CSRF（使用JWT不需要）
+                .csrf(AbstractHttpConfigurer::disable)
+                
+                // 配置CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                
+                // 配置Session管理（无状态）
+                .sessionManagement(session -> 
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                
+                // 配置请求授权
+                .authorizeHttpRequests(auth -> auth
+                        // 允许匿名访问的接口
+                        .requestMatchers(
+                                "/auth/login",
+                                "/auth/register",
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/h2-console/**",
+                                "/test/**"
+                        ).permitAll()
+                        
+                        // 管理员接口 - 仅管理员可访问
+                        .requestMatchers("/admin/**").hasRole("ADMIN")
+                        
+                        // 用户接口 - 需要登录
+                        .requestMatchers("/user/**").authenticated()
+                        
+                        // 其他请求需要认证
+                        .anyRequest().authenticated()
+                )
+                
+                // 添加JWT过滤器
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                
+                // 允许H2控制台iframe（开发环境）
+                .headers(headers -> headers.frameOptions(frame -> frame.disable()));
+        
+        return http.build();
+    }
+    
+    /**
+     * CORS配置
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("*"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // 允许的域名（使用 allowedOriginPatterns 支持通配符）
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "http://192.168.*.*:*"
+        ));
+        
+        // 允许的方法
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+        
+        // 允许的头
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        // 允许携带凭证
         configuration.setAllowCredentials(true);
+        
+        // 暴露响应头
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        
+        // 预检请求缓存时间（秒）
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
 }
